--- a/Home.html
+++ b/Home.html
@@ -125,9 +125,7 @@
                         <div class="u-layout-col">
                           <div class="u-container-style u-layout-cell u-size-60 u-layout-cell-5">
                             <div class="u-container-layout u-valign-middle">
-                              <p class="u-text u-text-body-alt-color u-text-2">We design logos, ad campaigns, letterhead, websites, marketing plans, content strategies, business cards, brochures, banners, email campaigns, displays, product packaging, branded swag, chicken coops
-                                                            and kitchen sinks. We write copy. We shoot photos. &nbsp;But we don’t stop there.Our agency offers a comprehensive suite of marketing, advertising, and web design services to ensure that your
-                                                            brand is well leveraged.</p>
+                              <p class="u-text u-text-body-alt-color u-text-2">TBA.</p>
                             </div>
                           </div>
                         </div>
@@ -162,8 +160,8 @@
               </div>
               <div class="u-align-center-lg u-align-center-sm u-align-center-xl u-container-style u-layout-cell u-size-20 u-layout-cell-2">
                 <div class="u-container-layout u-valign-middle-sm u-valign-middle-xs u-container-layout-2">
-                  <div class="u-palette-2-base u-shape u-shape-rectangle u-shape-3" data-href="https://nicepage.com" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-direction=""></div><span class="u-file-icon u-icon u-icon-2" data-href="https://nicepage.com"><img src="images/Logomark-TransparentWhite.png" alt=""></span>
-                  <h3 class="u-align-center-md u-align-center-xs u-custom-font u-font-playfair-display u-text u-text-body-alt-color u-text-2">Opensea</h3>
+                  <div class="u-palette-2-base u-shape u-shape-rectangle u-shape-3" data-href="https://www.instagram.com/bobs_daily/" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-direction=""></div><span class="u-file-icon u-icon u-icon-2" data-href="https://www.instagram.com/bobs_daily/"><img src="images/174855.png" alt=""></span>
+                  <h3 class="u-align-center-md u-align-center-xs u-custom-font u-font-playfair-display u-text u-text-body-alt-color u-text-2">Instagram</h3>
                 </div>
               </div>
               <div class="u-align-center-lg u-align-center-sm u-align-center-xl u-container-style u-layout-cell u-right-cell u-size-20 u-layout-cell-3">
