--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   </head>
-  <body class="u-body u-xl-mode"><header class="u-clearfix u-header u-header" id="sec-6384"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+  <body data-home-page="Home.html" data-home-page-title="Home" class="u-body u-xl-mode"><header class="u-clearfix u-header u-header" id="sec-6384"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="2048" data-image-height="2048">
           <img src="images/6220.png" class="u-logo-image u-logo-image-1">
         </a>
@@ -62,7 +62,7 @@
           </div>
         </nav>
       </div></header>
-    <section class="u-clearfix u-image u-shading u-section-1" id="carousel_5b9d" data-image-width="2048" data-image-height="2048">
+    <section class="u-clearfix u-image u-shading u-section-1" id="carousel_5b9d" data-image-width="910" data-image-height="912">
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-align-right u-container-style u-group u-group-1">
           <div class="u-container-layout u-container-layout-1">
@@ -125,7 +125,8 @@
                         <div class="u-layout-col">
                           <div class="u-container-style u-layout-cell u-size-60 u-layout-cell-5">
                             <div class="u-container-layout u-valign-middle">
-                              <p class="u-text u-text-body-alt-color u-text-2">TBA.</p>
+                              <p class="u-text u-text-body-alt-color u-text-2"><b>Bob Daily was created by a group of highschool students. We hope our art can bring people happiness and spread positivity.</b>
+                              </p>
                             </div>
                           </div>
                         </div>
@@ -146,7 +147,7 @@
         </div>
       </div>
     </section>
-    <section class="u-clearfix u-palette-3-base u-section-3" id="carousel_8216">
+    <section class="u-clearfix u-image u-shading u-section-3" id="carousel_8216" data-image-width="1125" data-image-height="750">
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-gradient u-opacity u-opacity-20 u-shape u-shape-circle u-shape-1"></div>
         <div class="u-clearfix u-expanded-width u-gutter-20 u-layout-wrap u-layout-wrap-1">
@@ -160,7 +161,7 @@
               </div>
               <div class="u-align-center-lg u-align-center-sm u-align-center-xl u-container-style u-layout-cell u-size-20 u-layout-cell-2">
                 <div class="u-container-layout u-valign-middle-sm u-valign-middle-xs u-container-layout-2">
-                  <div class="u-palette-2-base u-shape u-shape-rectangle u-shape-3" data-href="https://www.instagram.com/bobs_daily/" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-direction=""></div><span class="u-file-icon u-icon u-icon-2" data-href="https://www.instagram.com/bobs_daily/"><img src="images/174855.png" alt=""></span>
+                  <div class="u-palette-2-base u-shape u-shape-rectangle u-shape-3" data-href="https://www.instagram.com/bobs_daily/" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-direction=""></div><span class="u-file-icon u-icon u-icon-2" data-href="https://www.instagram.com/bobs_daily/"><img src="images/instagram-52.png" alt=""></span>
                   <h3 class="u-align-center-md u-align-center-xs u-custom-font u-font-playfair-display u-text u-text-body-alt-color u-text-2">Instagram</h3>
                 </div>
               </div>
@@ -182,21 +183,20 @@
       </div>
     </section>
     <section class="u-clearfix u-palette-3-base u-section-4" id="carousel_35ee">
-      <div class="u-clearfix u-sheet u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-bottom u-sheet-1">
         <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
           <div class="u-gutter-0 u-layout">
             <div class="u-layout-row">
               <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-1">
                 <div class="u-container-layout">
                   <img class="u-image u-image-1" src="images/58.png" data-image-width="2048" data-image-height="2048">
-                  <img src="images/Untitled3.png" alt="" class="u-image u-image-contain u-image-default u-opacity u-opacity-75 u-image-2" data-image-width="437" data-image-height="461">
                   <h2 class="u-custom-font u-font-playfair-display u-text u-text-white u-text-1">The Developer / Community Manager - Ivor Chu</h2>
                 </div>
               </div>
               <div class="u-align-left u-container-style u-layout-cell u-size-30 u-layout-cell-2">
                 <div class="u-container-layout">
                   <h2 class="u-custom-font u-font-playfair-display u-text u-text-white u-text-2">The Founder/Artist -Steven Chen</h2>
-                  <img class="u-image u-image-3" src="images/76.png" data-image-width="1600" data-image-height="1600">
+                  <img class="u-image u-image-2" src="images/76.png" data-image-width="1600" data-image-height="1600">
                 </div>
               </div>
             </div>
@@ -205,7 +205,7 @@
         <div class="u-align-right u-container-style u-group u-group-1">
           <div class="u-container-layout u-container-layout-3">
             <h2 class="u-custom-font u-font-playfair-display u-text u-text-3">Our Team</h2>
-            <p class="u-text u-text-4">We collaborate with ambitious brands and people; we’d love to build something great together.</p>
+            <p class="u-text u-text-4">We collaborate with the most talented people; we’d love to build something great together.</p>
           </div>
         </div>
       </div>
