--- a/Bobs-Daily.html
+++ b/Bobs-Daily.html
@@ -32,7 +32,7 @@
     <meta property="og:type" content="website">
   </head>
   <body class="u-body u-xl-mode"><header class="u-clearfix u-header u-header" id="sec-6384"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="2048" data-image-height="2048">
+        <a href="bobsdaily.io" class="u-image u-logo u-image-1" data-image-width="2048" data-image-height="2048" title="bobsdaily">
           <img src="images/6220.png" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
