--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <meta property="og:type" content="website">
   </head>
   <body data-home-page="Bobs-Daily.html" data-home-page-title="Bobs Daily" class="u-body u-xl-mode"><header class="u-clearfix u-header u-header" id="sec-6384"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <a href="bobsdaily.io" class="u-image u-logo u-image-1" data-image-width="2048" data-image-height="2048" title="bobsdaily">
+        <a href="Bobs-Daily.html" data-page-id="41643821" class="u-image u-logo u-image-1" data-image-width="2048" data-image-height="2048" title="bobsdaily">
           <img src="images/6220.png" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
@@ -47,6 +47,7 @@
             <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Bobs-Daily.html#carousel_5b9d" data-page-id="41643821" style="padding: 10px 20px;">Bobs Daily</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Bobs-Daily.html#carousel_7a06" data-page-id="41643821" style="padding: 10px 20px;">About</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Bobs-Daily.html#carousel_8216" data-page-id="41643821" style="padding: 10px 20px;">Contact</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="https://opensea.io/explore-collections" style="padding: 10px 20px;">OpenSea</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
@@ -56,6 +57,7 @@
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Bobs-Daily.html#carousel_5b9d" data-page-id="41643821" style="padding: 10px 20px;">Bobs Daily</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Bobs-Daily.html#carousel_7a06" data-page-id="41643821" style="padding: 10px 20px;">About</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Bobs-Daily.html#carousel_8216" data-page-id="41643821" style="padding: 10px 20px;">Contact</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://opensea.io/explore-collections" style="padding: 10px 20px;">OpenSea</a>
 </li></ul>
               </div>
             </div>
@@ -154,33 +156,34 @@
         <div class="u-clearfix u-expanded-width u-gutter-20 u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
             <div class="u-layout-row">
-              <div class="u-align-center-lg u-align-center-sm u-align-center-xl u-container-style u-layout-cell u-left-cell u-size-20 u-layout-cell-1">
-                <div class="u-container-layout u-valign-middle-sm u-valign-middle-xs u-container-layout-1">
-                  <div class="u-palette-5-base u-shape u-shape-rectangle u-shape-2" data-href="https://discord.gg/P55FYDAACv" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-direction=""></div><span class="u-file-icon u-icon u-icon-1" data-href="https://discord.gg/P55FYDAACv"><img src="images/5968898.png" alt=""></span>
-                  <h3 class="u-align-center-md u-align-center-xs u-custom-font u-font-playfair-display u-text u-text-body-alt-color u-text-1">Discord</h3>
+              <div class="u-align-center u-container-style u-layout-cell u-left-cell u-size-20 u-layout-cell-1">
+                <div class="u-container-layout u-container-layout-1">
+                  <div class="u-palette-4-base u-shape u-shape-rectangle u-shape-2" data-href="https://discord.gg/P55FYDAACv" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-direction=""></div><span class="u-file-icon u-icon u-icon-1" data-href="https://discord.gg/P55FYDAACv"><img src="images/5968898.png" alt=""></span>
+                  <h3 class="u-custom-font u-font-playfair-display u-text u-text-body-alt-color u-text-1">Discord</h3>
                 </div>
               </div>
-              <div class="u-align-center-lg u-align-center-sm u-align-center-xl u-container-style u-layout-cell u-size-20 u-layout-cell-2">
-                <div class="u-container-layout u-valign-middle-sm u-valign-middle-xs u-container-layout-2">
+              <div class="u-align-center u-container-style u-layout-cell u-size-20 u-layout-cell-2">
+                <div class="u-container-layout u-container-layout-2">
                   <div class="u-palette-2-base u-shape u-shape-rectangle u-shape-3" data-href="https://www.instagram.com/bobs_daily/" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-direction=""></div><span class="u-file-icon u-icon u-icon-2" data-href="https://www.instagram.com/bobs_daily/"><img src="images/instagram-52.png" alt=""></span>
-                  <h3 class="u-align-center-md u-align-center-xs u-custom-font u-font-playfair-display u-text u-text-body-alt-color u-text-2">Instagram</h3>
+                  <h3 class="u-custom-font u-font-playfair-display u-text u-text-body-alt-color u-text-2">Instagram</h3>
                 </div>
               </div>
-              <div class="u-align-center-lg u-align-center-sm u-align-center-xl u-container-style u-layout-cell u-right-cell u-size-20 u-layout-cell-3">
-                <div class="u-container-layout u-valign-middle-sm u-valign-middle-xs u-container-layout-3">
+              <div class="u-align-center u-container-style u-layout-cell u-right-cell u-size-20 u-layout-cell-3">
+                <div class="u-container-layout u-container-layout-3">
                   <div class="u-palette-1-base u-shape u-shape-rectangle u-shape-4" data-href="https://twitter.com/BobsDaily1" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-direction=""></div><span class="u-file-icon u-icon u-icon-3" data-href="https://twitter.com/BobsDaily1"><img src="images/81609.png" alt=""></span>
-                  <h3 class="u-align-center-md u-align-center-xs u-custom-font u-font-playfair-display u-text u-text-body-alt-color u-text-3">Twitter</h3>
+                  <h3 class="u-custom-font u-font-playfair-display u-text u-text-body-alt-color u-text-3">Twitter</h3>
                 </div>
               </div>
             </div>
           </div>
         </div>
         <div class="u-align-right u-container-style u-group u-group-1">
-          <div class="u-container-layout u-valign-middle-sm u-container-layout-4">
+          <div class="u-container-layout u-container-layout-4">
             <h2 class="u-custom-font u-font-playfair-display u-text u-text-body-alt-color u-text-4">CONTACT US</h2>
-            <p class="u-text u-text-body-alt-color u-text-5">Through means of social medias and other. Purchase our NFTs on Opensea!</p>
+            <p class="u-text u-text-body-alt-color u-text-5">Through means of social medias and other. Purchase our NFTs on OpenSea!</p>
           </div>
         </div>
+        <a href="https://opensea.io/explore-collections" class="u-border-2 u-border-white u-btn u-button-style u-hover-white u-none u-text-hover-black u-text-white u-btn-1" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-direction="">OpenSea</a>
       </div>
     </section>
     <section class="u-clearfix u-palette-3-base u-section-4" id="carousel_35ee">
