--- a/index.html
+++ b/index.html
@@ -162,10 +162,11 @@
                   <h3 class="u-custom-font u-font-playfair-display u-text u-text-body-alt-color u-text-1">Discord</h3>
                 </div>
               </div>
-              <div class="u-align-center u-container-style u-layout-cell u-size-20 u-layout-cell-2">
+              <div class="u-container-style u-layout-cell u-size-20 u-layout-cell-2">
                 <div class="u-container-layout u-container-layout-2">
                   <div class="u-palette-2-base u-shape u-shape-rectangle u-shape-3" data-href="https://www.instagram.com/bobs_daily/" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-direction=""></div><span class="u-file-icon u-icon u-icon-2" data-href="https://www.instagram.com/bobs_daily/"><img src="images/instagram-52.png" alt=""></span>
-                  <h3 class="u-custom-font u-font-playfair-display u-text u-text-body-alt-color u-text-2">Instagram</h3>
+                  <h3 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-body-alt-color u-text-2">Instagram</h3>
+                  <a href="https://opensea.io/explore-collections" class="u-border-2 u-border-white u-btn u-button-style u-hover-white u-none u-text-hover-black u-text-white u-btn-1" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-direction="">OpenSea</a>
                 </div>
               </div>
               <div class="u-align-center u-container-style u-layout-cell u-right-cell u-size-20 u-layout-cell-3">
@@ -183,7 +184,6 @@
             <p class="u-text u-text-body-alt-color u-text-5">Through means of social medias and other. Purchase our NFTs on OpenSea!</p>
           </div>
         </div>
-        <a href="https://opensea.io/explore-collections" class="u-border-2 u-border-white u-btn u-button-style u-hover-white u-none u-text-hover-black u-text-white u-btn-1" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-direction="">OpenSea</a>
       </div>
     </section>
     <section class="u-clearfix u-palette-3-base u-section-4" id="carousel_35ee">
