--- a/Bobs-Daily.html
+++ b/Bobs-Daily.html
@@ -230,12 +230,17 @@
         </div>
       </div>
     </section>
-    <section class="u-align-center u-clearfix u-section-5" id="carousel_9296">
-      <div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-custom-font u-font-montserrat u-text u-text-1">Something more about&nbsp;<br>Bob's Daily...
-        </p>
-        <div class="u-border-10 u-border-palette-1-base u-line u-line-horizontal u-line-1"></div>
-        <p class="u-text u-text-2"> The idea for the drawing of “Bob’s Daily” came out after our artists tried out several trials of drawing NFT on the app Procreate. The facial expression of Bob was inspired by the use of different kinds of emojis in normal days, such as emojis or facial expressions made up of symbols. The name of “Bob’s Daily” came out when we were discussing and trying to make something similar to the Diary of a Wimpy Kid. Most importantly, our goal is to bring people love, happiness, and positivity!</p>
+    <section class="u-align-center u-clearfix u-section-5" id="carousel_eab1">
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+        <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
+          <div class="u-layout">
+            <div class="u-layout-row">
+              <div class="u-align-left u-container-style u-image u-layout-cell u-size-60 u-image-1" data-animation-name="slideIn" data-animation-duration="2250" data-animation-direction="Right" data-image-width="1920" data-image-height="1080">
+                <div class="u-container-layout u-container-layout-1"></div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <section class="u-align-center u-clearfix u-section-6" id="carousel_861a">
@@ -243,34 +248,8 @@
         <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
             <div class="u-layout-row">
-              <div class="u-align-left u-container-style u-grey-5 u-layout-cell u-size-60 u-layout-cell-1" data-animation-name="slideIn" data-animation-duration="2250" data-animation-direction="Right">
-                <div class="u-container-layout u-container-layout-1"><span class="u-file-icon u-icon u-icon-1"><img src="images/2618596.png" alt=""></span>
-                  <p class="u-custom-font u-font-montserrat u-text u-text-1"><b>
-                      <span style="font-size: 1.25rem; font-weight: 400;">
-                        <span style="font-weight: 700;">How many Bobs are there?</span>
-                        <br>There are a total of 1,000 Bobs, some of them are special Bobs.
-                      </span></b>
-                    <br>
-                    <br><b>
-                      <span style="font-size: 1.25rem; font-weight: 400;">
-                        <span style="font-weight: 700;">Will there be more Bobs in the future?</span>
-                        <br>Yes, there will be more than 1,000 Bobs in the future.
-                      </span></b>
-                    <br>
-                    <br><b>
-                      <span style="font-size: 1.25rem; font-weight: 400;">
-                        <span style="font-weight: 700;">What makes this project different?</span>
-                        <br>We plan to create a story related to Bob’s life and print out NFT on T-shirts.
-                      </span></b>
-                    <br>
-                    <br><b>
-                      <span style="font-size: 1.25rem; font-weight: 400;">
-                        <span style="font-weight: 700;">When will the first wave of Bobs drop?</span>
-                        <br>Sometime in February, so make sure you check out our latest news on Twitter and Discord!!!
-                      </span>
-                      <br></b>
-                  </p>
-                </div>
+              <div class="u-align-left u-container-style u-image u-layout-cell u-size-60 u-image-1" data-animation-name="slideIn" data-animation-duration="2250" data-animation-direction="Right" data-image-width="1920" data-image-height="1080">
+                <div class="u-container-layout u-container-layout-1"></div>
               </div>
             </div>
           </div>
