--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
           <div class="u-layout">
             <div class="u-layout-row">
               <div class="u-align-left u-container-style u-layout-cell u-shape-rectangle u-size-30 u-white u-layout-cell-1" data-animation-name="slideIn" data-animation-duration="2000" data-animation-direction="Left">
-                <div class="u-container-layout u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-container-layout-1">
+                <div class="u-container-layout u-container-layout-1">
                   <h2 class="u-custom-font u-font-montserrat u-text u-text-1"> Preparing For Your Success Provide Best IT Solutions.</h2>
-                  <a href="https://opensea.io/explore-collections" class="u-active-palette-1-light-1 u-border-none u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-text-active-white u-text-body-alt-color u-text-hover-white u-btn-1">Opeansea</a>
+                  <a href="https://opensea.io/explore-collections" class="u-active-palette-1-light-1 u-border-none u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-text-active-white u-text-body-alt-color u-text-hover-white u-btn-1" target="_blank">Opeansea</a>
                 </div>
               </div>
               <div class="u-align-left u-container-style u-layout-cell u-size-30 u-layout-cell-2" data-animation-name="slideIn" data-animation-duration="2000" data-animation-direction="Right">
@@ -235,7 +235,7 @@
         <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
             <div class="u-layout-row">
-              <div class="u-align-left u-container-style u-image u-layout-cell u-size-60 u-image-1" data-animation-name="slideIn" data-animation-duration="2250" data-animation-direction="Right" data-image-width="1920" data-image-height="1080">
+              <div class="u-align-left u-container-style u-image u-layout-cell u-size-60 u-image-1" data-animation-name="bounceIn" data-animation-duration="2250" data-animation-direction="" data-image-width="1920" data-image-height="1080" data-animation-out="0">
                 <div class="u-container-layout u-container-layout-1"></div>
               </div>
             </div>
@@ -367,7 +367,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
                   <h2 class="u-text u-text-default u-text-1">Follow Us</h2>
                   <p class="u-text u-text-2">Get our latest updates through social medias!<br>Purchase our NFTs on OpenSea!<br>
                   </p>
-                  <a href="https://opensea.io/explore-collections" class="u-active-none u-border-2 u-border-palette-1-base u-btn u-btn-rectangle u-button-style u-hover-none u-none u-btn-1">OpenSea</a>
+                  <a href="https://opensea.io/explore-collections" class="u-active-none u-border-2 u-border-palette-1-base u-btn u-btn-rectangle u-button-style u-hover-none u-none u-btn-1" target="_blank">OpenSea</a>
                 </div>
               </div>
               <div class="u-align-left-sm u-align-left-xs u-align-right-lg u-align-right-md u-align-right-xl u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-2">
