--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ borders: top right bottom left !important
 		c-1.237-1.237-1.918-2.885-1.918-4.639S7.775,9.22,9.013,7.983C9.403,7.593,9.403,6.96,9.013,6.569z"></path>
 </g></svg></span>
                 <h5 class="u-custom-font u-font-montserrat u-text u-text-default u-text-1">Copywriting</h5>
-                <p class="u-text u-text-default u-text-2"><b>Brand new story chapters coming in Season 2.</b>
+                <p class="u-text u-text-2"><b>Brand new story chapters coming in Season 2.</b>
                 </p>
               </div>
             </div>
@@ -134,7 +134,7 @@ borders: top right bottom left !important
 		S27.553,13,27,13z"></path>
 </g></svg></span>
                 <h5 class="u-custom-font u-font-montserrat u-text u-text-default u-text-3">Graphic Design</h5>
-                <p class="u-text u-text-default u-text-4"><b>More information can be seen on the roadmap.</b>
+                <p class="u-text u-text-4"><b>More information can be seen on the roadmap.</b>
                 </p>
               </div>
             </div>
@@ -150,7 +150,7 @@ borders: top right bottom left !important
 		S29.964,45.019,27.454,45.019z"></path>
 </g></svg></span>
                 <h5 class="u-custom-font u-font-montserrat u-text u-text-default u-text-5">Development</h5>
-                <p class="u-text u-text-default u-text-6"><b>We will continue to update our social media.</b>
+                <p class="u-text u-text-6"><b>We will continue to update our social media.</b>
                 </p>
               </div>
             </div>
@@ -188,7 +188,7 @@ borders: top right bottom left !important
 	c0,1.77,0.983,3.361,2.566,4.153l9.553,4.776C56.513,48.374,58,50.78,58,53.457V55.5z"></path></svg></span>
                 <h5 class="u-custom-font u-font-montserrat u-text u-text-default u-text-7">Team<br>
                 </h5>
-                <p class="u-text u-text-default u-text-8"><b>We will continue to create fun events in Bob’s Daily.</b>
+                <p class="u-text u-text-8"><b>We will continue to create fun events in Bob’s Daily.</b>
                 </p>
               </div>
             </div>
@@ -234,7 +234,8 @@ borders: top right bottom left !important
             <div class="u-align-center u-container-style u-list-item u-radius-15 u-repeater-item u-shape-round u-white u-list-item-1">
               <div class="u-container-layout u-similar-container u-container-layout-1">
                 <div class="u-border-6 u-border-white u-image u-image-circle u-image-1" alt="" data-image-width="2048" data-image-height="2048" data-animation-name="zoomIn" data-animation-duration="2000" data-animation-direction=""></div>
-                <h5 class="u-custom-font u-font-montserrat u-text u-text-default u-text-3">Season 1</h5>
+                <h5 class="u-custom-font u-font-montserrat u-text u-text-default u-text-3">Season 1<br>2022
+                </h5>
                 <p class="u-text u-text-4"><b><b>We are dropping 1,000 Bobs on OpenSea in February!</b>
                     <br></b>
                 </p>
@@ -243,7 +244,8 @@ borders: top right bottom left !important
             <div class="u-align-center u-container-style u-list-item u-radius-15 u-repeater-item u-shape-round u-white u-list-item-2">
               <div class="u-container-layout u-similar-container u-container-layout-2">
                 <div class="u-border-6 u-border-white u-image u-image-circle u-image-2" alt="" data-image-width="2048" data-image-height="2048" data-animation-name="zoomIn" data-animation-duration="2000" data-animation-direction=""></div>
-                <h5 class="u-custom-font u-font-montserrat u-text u-text-default u-text-5">Season 2</h5>
+                <h5 class="u-custom-font u-font-montserrat u-text u-text-default u-text-5">Season 2<br>2022
+                </h5>
                 <p class="u-text u-text-6"><b>We will be releasing a journal of Bob's life told in story chapters. This is exclusive to owners of Bob's NFTs. YOU ONLY HAVE ACCESS WHEN YOU HAVE THE BOB’S DAILY NFT IN YOUR WALLET.</b>
                 </p>
               </div>
@@ -251,7 +253,8 @@ borders: top right bottom left !important
             <div class="u-align-center u-container-style u-list-item u-radius-15 u-repeater-item u-shape-round u-white u-list-item-3">
               <div class="u-container-layout u-similar-container u-container-layout-3">
                 <div class="u-border-6 u-border-white u-image u-image-circle u-image-3" alt="" data-image-width="2048" data-image-height="2048" data-animation-name="zoomIn" data-animation-duration="2000" data-animation-direction=""></div>
-                <h5 class="u-custom-font u-font-montserrat u-text u-text-default u-text-7">Season 3</h5>
+                <h5 class="u-custom-font u-font-montserrat u-text u-text-default u-text-7">Season 3<br>2022
+                </h5>
                 <p class="u-text u-text-8"><b>We will be releasing more characters in exciting styles.</b>
                 </p>
               </div>
@@ -259,7 +262,8 @@ borders: top right bottom left !important
             <div class="u-align-center u-container-style u-list-item u-radius-15 u-repeater-item u-shape-round u-white u-list-item-4">
               <div class="u-container-layout u-similar-container u-container-layout-4">
                 <div class="u-border-6 u-border-white u-image u-image-circle u-image-4" alt="" data-image-width="2048" data-image-height="2048" data-animation-name="zoomIn" data-animation-duration="2000" data-animation-direction=""></div>
-                <h5 class="u-custom-font u-font-montserrat u-text u-text-default u-text-9">Season 4</h5>
+                <h5 class="u-custom-font u-font-montserrat u-text u-text-default u-text-9">Season 4<br>2023
+                </h5>
                 <p class="u-text u-text-10"><b></b><b>We will be releasing merchandise, such as Bob t-shirts and more.</b>
                 </p>
               </div>
@@ -267,7 +271,8 @@ borders: top right bottom left !important
             <div class="u-align-center u-container-style u-list-item u-radius-15 u-repeater-item u-shape-round u-white u-list-item-5">
               <div class="u-container-layout u-similar-container u-container-layout-5">
                 <div class="u-border-6 u-border-white u-image u-image-circle u-image-5" alt="" data-image-width="2048" data-image-height="2048" data-animation-name="zoomIn" data-animation-duration="2000" data-animation-direction=""></div>
-                <h5 class="u-custom-font u-font-montserrat u-text u-text-default u-text-11">Season 5</h5>
+                <h5 class="u-custom-font u-font-montserrat u-text u-text-default u-text-11">Season 5<br>2023
+                </h5>
                 <p class="u-text u-text-12"><b></b><b>We will start the minting project; Bobs will be made into 3D figurines.</b>
                 </p>
               </div>
@@ -275,7 +280,8 @@ borders: top right bottom left !important
             <div class="u-align-center u-container-style u-list-item u-radius-15 u-repeater-item u-shape-round u-white u-list-item-6">
               <div class="u-container-layout u-similar-container u-container-layout-6">
                 <div class="u-border-6 u-border-white u-image u-image-circle u-image-6" alt="" data-image-width="2048" data-image-height="2048" data-animation-name="zoomIn" data-animation-duration="2000" data-animation-direction=""></div>
-                <h5 class="u-custom-font u-font-montserrat u-text u-text-default u-text-13">Season 6</h5>
+                <h5 class="u-custom-font u-font-montserrat u-text u-text-default u-text-13">Season 6<br>2023
+                </h5>
                 <p class="u-text u-text-14"><b>Coming Soon !</b>
                 </p>
               </div>
