--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
             <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Bobs-Daily.html#sec-b277" data-page-id="65888378" style="padding: 10px 20px;">Bobs Daily</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Bobs-Daily.html#carousel_7123" data-page-id="65888378" style="padding: 10px 20px;">About</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Bobs-Daily.html#carousel_e63e" data-page-id="65888378" style="padding: 10px 20px;">Roadmap</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Bobs-Daily.html#carousel_a58b" data-page-id="65888378" style="padding: 10px 20px;">Contact</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Bobs-Daily.html#carousel_ac2e" data-page-id="65888378" style="padding: 10px 20px;">FAQs</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Bobs-Daily.html#carousel_1598" data-page-id="65888378" style="padding: 10px 20px;">Contact</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
@@ -65,7 +66,8 @@
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Bobs-Daily.html#sec-b277" data-page-id="65888378" style="padding: 10px 20px;">Bobs Daily</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Bobs-Daily.html#carousel_7123" data-page-id="65888378" style="padding: 10px 20px;">About</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Bobs-Daily.html#carousel_e63e" data-page-id="65888378" style="padding: 10px 20px;">Roadmap</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Bobs-Daily.html#carousel_a58b" data-page-id="65888378" style="padding: 10px 20px;">Contact</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Bobs-Daily.html#carousel_ac2e" data-page-id="65888378" style="padding: 10px 20px;">FAQs</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Bobs-Daily.html#carousel_1598" data-page-id="65888378" style="padding: 10px 20px;">Contact</a>
 </li></ul>
               </div>
             </div>
