--- a/Bobs-Daily.html
+++ b/Bobs-Daily.html
@@ -236,7 +236,7 @@ borders: top right bottom left !important
                 <div class="u-border-6 u-border-white u-image u-image-circle u-image-1" alt="" data-image-width="2048" data-image-height="2048" data-animation-name="zoomIn" data-animation-duration="2000" data-animation-direction=""></div>
                 <h5 class="u-custom-font u-font-montserrat u-text u-text-default u-text-3">Season 1<br>2022
                 </h5>
-                <p class="u-text u-text-4"><b><b>We are dropping 1,000 Bobs on OpenSea in February!</b>
+                <p class="u-text u-text-4"><b><b>We are dropping 1,000 Bobs on OpenSea in March 19th!</b>
                     <br></b>
                 </p>
               </div>
@@ -341,7 +341,7 @@ borders: top right bottom left !important
             <div class="u-accordion-pane u-container-style u-expanded-width u-white u-accordion-pane-4" id="accordion-f600" aria-labelledby="link-accordion-f600">
               <div class="u-container-layout u-container-layout-4">
                 <div class="fr-view u-clearfix u-rich-text u-text">
-                  <p>Sometime in February, so make sure you check out our latest news on Twitter and Discord!!!</p>
+                  <p>March 19th, so make sure you check out our latest news on Twitter and Discord!!!</p>
                 </div>
               </div>
             </div>
